# Mandelbrot-Set-Generator

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
mandelbrotpy/: __init__.py  _mandelbrot_coloring.c  _mandelbrot_coloring.py  _mandelbrot_coloring.pyx  _mandelbrot_escapetime.c  _mandelbrot_escapetime.py  _mandelbrot_escapetime.pyx  _mandelbrot_iter.c  _mandelbrot_iter.pyx  mandelbrot_class.py  mandelbrot_plot.py
mandelbrotpy.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
test/: test.py
