[build-system]
requires = ["setuptools >= 61.0", "wheel", "Cython", "numpy"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["mandelbrotpy"]

[project]
name = "mandelbrotpy"
version = "0.0.1"
description = "A package of mandelbrot set plotting"
authors = [{name = "YaxinerZhang", email = "23373130@buaa.edu.cn"}]
license = { file = "LICENSE" }
requires-python = ">= 3.10"
dependencies = ["matplotlib", "numpy", "Cython"]
readme = { file = "README.md", content-type = "text/markdown" }

[project.urls]
Repository = "https://github.com/YaxinerZhang/Mandelbrot-Set-Generator"

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = ["test"]


